--- a/src/SoundCharts.Explorer.MacOS/SoundCharts.Explorer.MacOS.csproj
+++ b/src/SoundCharts.Explorer.MacOS/SoundCharts.Explorer.MacOS.csproj
@@ -92,7 +92,7 @@
       <HintPath>..\packages\System.Text.Encodings.Web.6.0.0\lib\netstandard2.0\System.Text.Encodings.Web.dll</HintPath>
     </Reference>
     <Reference Include="System.Text.Json">
-      <HintPath>..\packages\System.Text.Json.6.0.0\lib\netstandard2.0\System.Text.Json.dll</HintPath>
+      <HintPath>..\packages\System.Text.Json.6.0.2\lib\netstandard2.0\System.Text.Json.dll</HintPath>
     </Reference>
     <Reference Include="LiteDB">
       <HintPath>..\packages\LiteDB.5.0.11\lib\netstandard2.0\LiteDB.dll</HintPath>
@@ -155,6 +155,8 @@
     <Folder Include="Services\Logging\" />
     <Folder Include="Views\SourceList\" />
     <Folder Include="Services\Tiles\" />
+    <Folder Include="Views\Overlays\" />
+    <Folder Include="Services\Http\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Info.plist" />
@@ -217,6 +219,10 @@
       <DependentUpon>AppViewController.cs</DependentUpon>
     </Compile>
     <Compile Include="Services\Logging\ILoggingBuilderExtensions.cs" />
+    <Compile Include="Views\Overlays\ChartOverlay.cs" />
+    <Compile Include="Views\Overlays\ChartOverlayRenderer.cs" />
+    <Compile Include="Services\Http\IHttpClientManager.cs" />
+    <Compile Include="Services\Http\HttpClientManager.cs" />
   </ItemGroup>
   <ItemGroup>
     <InterfaceDefinition Include="Main.storyboard" />
@@ -238,6 +244,6 @@
     </NativeReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Mac\Xamarin.Mac.CSharp.targets" />
-  <Import Project="..\packages\System.Text.Json.6.0.0\build\System.Text.Json.targets" Condition="Exists('..\packages\System.Text.Json.6.0.0\build\System.Text.Json.targets')" />
   <Import Project="..\packages\Microsoft.Extensions.Logging.Abstractions.6.0.0\build\Microsoft.Extensions.Logging.Abstractions.targets" Condition="Exists('..\packages\Microsoft.Extensions.Logging.Abstractions.6.0.0\build\Microsoft.Extensions.Logging.Abstractions.targets')" />
+  <Import Project="..\packages\System.Text.Json.6.0.2\build\System.Text.Json.targets" Condition="Exists('..\packages\System.Text.Json.6.0.2\build\System.Text.Json.targets')" />
 </Project>
