--- a/src/SoundCharts.Explorer.TileService/SoundCharts.Explorer.TileService.csproj
+++ b/src/SoundCharts.Explorer.TileService/SoundCharts.Explorer.TileService.csproj
@@ -6,6 +6,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <PropertyGroup Condition=" '$(RunConfiguration)' == 'SoundCharts.Explorer.TilesService' " />
   <ItemGroup>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
