--- a/src/SoundCharts.Explorer.MacOS/packages.config
+++ b/src/SoundCharts.Explorer.MacOS/packages.config
@@ -14,17 +14,21 @@
   <package id="Microsoft.Extensions.Options" version="6.0.0" targetFramework="xamarinmac20" />
   <package id="Microsoft.Extensions.Options.ConfigurationExtensions" version="6.0.0" targetFramework="xamarinmac20" />
   <package id="Microsoft.Extensions.Primitives" version="6.0.0" targetFramework="xamarinmac20" />
-  <package id="SixLabors.ImageSharp" version="1.0.4" targetFramework="xamarinmac20" />
+  <package id="OncaInc.NauticalCharts" version="0.3.0" targetFramework="xamarinmac20" />
+  <package id="OncaInc.NauticalCharts.ImageSharp" version="0.3.0" targetFramework="xamarinmac20" />
+  <package id="SixLabors.ImageSharp" version="2.0.0" targetFramework="xamarinmac20" />
   <package id="System.Buffers" version="4.5.1" targetFramework="xamarinmac20" />
   <package id="System.Collections.Immutable" version="6.0.0" targetFramework="xamarinmac20" />
   <package id="System.Diagnostics.DiagnosticSource" version="6.0.0" targetFramework="xamarinmac20" />
   <package id="System.Diagnostics.EventLog" version="6.0.0" targetFramework="xamarinmac20" />
+  <package id="System.IO.Pipelines" version="5.0.1" targetFramework="xamarinmac20" />
   <package id="System.Memory" version="4.5.4" targetFramework="xamarinmac20" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="xamarinmac20" />
   <package id="System.Reactive" version="5.0.0" targetFramework="xamarinmac20" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="xamarinmac20" />
   <package id="System.Runtime.InteropServices.WindowsRuntime" version="4.3.0" targetFramework="xamarinmac20" />
   <package id="System.Security.Principal.Windows" version="5.0.0" targetFramework="xamarinmac20" />
+  <package id="System.Text.Encoding.CodePages" version="5.0.0" targetFramework="xamarinmac20" />
   <package id="System.Text.Encodings.Web" version="6.0.0" targetFramework="xamarinmac20" />
   <package id="System.Text.Json" version="6.0.2" targetFramework="xamarinmac20" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="xamarinmac20" />
