Try switch to dotnet-based builds.

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -139,12 +139,12 @@ jobs:
     
     - name: Install Dependencies
       run: |
-        nuget restore src/SoundCharts.Explorer.Common/SoundCharts.Explorer.Common.csproj -SolutionDirectory src
-        nuget restore src/SoundCharts.Explorer.MacOS/SoundCharts.Explorer.MacOS.csproj -SolutionDirectory src
-        nuget restore src/SoundCharts.Explorer.ManagedLogging/SoundCharts.Explorer.ManagedLogging.csproj -SolutionDirectory src
+        dotnet restore src/SoundCharts.Explorer.Common/SoundCharts.Explorer.Common.csproj -SolutionDirectory src
+        dotnet restore src/SoundCharts.Explorer.MacOS/SoundCharts.Explorer.MacOS.csproj -SolutionDirectory src
+        dotnet restore src/SoundCharts.Explorer.ManagedLogging/SoundCharts.Explorer.ManagedLogging.csproj -SolutionDirectory src
 
     - name: Build
-      run: msbuild src/SoundCharts.Explorer.MacOS/SoundCharts.Explorer.MacOS.csproj /p:Configuration=Release /t:Rebuild
+      run: dotnet build src/SoundCharts.Explorer.MacOS/SoundCharts.Explorer.MacOS.csproj --configuration Release --no-restore
 
     - name: 'Upload Artifact'
       uses: actions/upload-artifact@v2
