--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -139,9 +139,9 @@ jobs:
     
     - name: Install Dependencies
       run: |
-        dotnet restore src/SoundCharts.Explorer.Common/SoundCharts.Explorer.Common.csproj -SolutionDirectory src
-        dotnet restore src/SoundCharts.Explorer.MacOS/SoundCharts.Explorer.MacOS.csproj -SolutionDirectory src
-        dotnet restore src/SoundCharts.Explorer.ManagedLogging/SoundCharts.Explorer.ManagedLogging.csproj -SolutionDirectory src
+        dotnet restore src/SoundCharts.Explorer.Common/SoundCharts.Explorer.Common.csproj
+        dotnet restore src/SoundCharts.Explorer.MacOS/SoundCharts.Explorer.MacOS.csproj
+        dotnet restore src/SoundCharts.Explorer.ManagedLogging/SoundCharts.Explorer.ManagedLogging.csproj
 
     - name: Build
       run: dotnet build src/SoundCharts.Explorer.MacOS/SoundCharts.Explorer.MacOS.csproj --configuration Release --no-restore
