--- a/src/SoundCharts.Explorer.MacOS/packages.config
+++ b/src/SoundCharts.Explorer.MacOS/packages.config
@@ -14,6 +14,7 @@
   <package id="Microsoft.Extensions.Options" version="6.0.0" targetFramework="xamarinmac20" />
   <package id="Microsoft.Extensions.Options.ConfigurationExtensions" version="6.0.0" targetFramework="xamarinmac20" />
   <package id="Microsoft.Extensions.Primitives" version="6.0.0" targetFramework="xamarinmac20" />
+  <package id="Microsoft.Net.Compilers" version="4.1.0" targetFramework="xamarinmac20" developmentDependency="true" />
   <package id="OncaInc.NauticalCharts" version="0.3.1" targetFramework="xamarinmac20" />
   <package id="OncaInc.NauticalCharts.ImageSharp" version="0.3.1" targetFramework="xamarinmac20" />
   <package id="SixLabors.ImageSharp" version="2.0.0" targetFramework="xamarinmac20" />
