--- a/src/SoundCharts.Explorer.MacOS/packages.config
+++ b/src/SoundCharts.Explorer.MacOS/packages.config
@@ -15,8 +15,8 @@
   <package id="Microsoft.Extensions.Options.ConfigurationExtensions" version="6.0.0" targetFramework="xamarinmac20" />
   <package id="Microsoft.Extensions.Primitives" version="6.0.0" targetFramework="xamarinmac20" />
   <package id="Microsoft.Net.Compilers" version="4.1.0" targetFramework="xamarinmac20" developmentDependency="true" />
-  <package id="OncaInc.NauticalCharts" version="0.3.1" targetFramework="xamarinmac20" />
-  <package id="OncaInc.NauticalCharts.ImageSharp" version="0.3.1" targetFramework="xamarinmac20" />
+  <package id="OncaInc.NauticalCharts" version="0.4.0" targetFramework="xamarinmac20" />
+  <package id="OncaInc.NauticalCharts.ImageSharp" version="0.4.0" targetFramework="xamarinmac20" />
   <package id="SixLabors.ImageSharp" version="2.0.0" targetFramework="xamarinmac20" />
   <package id="System.Buffers" version="4.5.1" targetFramework="xamarinmac20" />
   <package id="System.Collections.Immutable" version="6.0.0" targetFramework="xamarinmac20" />
@@ -32,5 +32,6 @@
   <package id="System.Text.Encoding.CodePages" version="6.0.0" targetFramework="xamarinmac20" />
   <package id="System.Text.Encodings.Web" version="6.0.0" targetFramework="xamarinmac20" />
   <package id="System.Text.Json" version="6.0.2" targetFramework="xamarinmac20" />
+  <package id="System.Threading.Channels" version="6.0.0" targetFramework="xamarinmac20" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="xamarinmac20" />
 </packages>
