--- a/src/SoundCharts.Explorer.MacOS/SoundCharts.Explorer.MacOS.csproj
+++ b/src/SoundCharts.Explorer.MacOS/SoundCharts.Explorer.MacOS.csproj
@@ -173,6 +173,8 @@
     <Folder Include="Views\Overlays\" />
     <Folder Include="Services\Http\" />
     <Folder Include="Services\Collections\" />
+    <Folder Include="Views\SourceList\Model\" />
+    <Folder Include="Views\SourceList\Objects\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Info.plist" />
@@ -248,6 +250,20 @@
     <Compile Include="Utils\ChartDataExtensions.cs" />
     <Compile Include="Services\Collections\IChartProcessor.cs" />
     <Compile Include="Services\Collections\ChartProcessor.cs" />
+    <Compile Include="Views\SourceList\ITreeDataProvider.cs" />
+    <Compile Include="Views\SourceList\Model\ExplorerItem.cs" />
+    <Compile Include="Views\SourceList\Model\HeaderItem.cs" />
+    <Compile Include="Views\SourceList\Objects\HeaderObject.cs" />
+    <Compile Include="Views\SourceList\Model\ChartCollectionChartItem.cs" />
+    <Compile Include="Views\SourceList\Objects\ChartCollectionChartObject.cs" />
+    <Compile Include="Views\SourceList\SourceListTreeDataSource.cs" />
+    <Compile Include="Views\SourceList\Model\ExplorerTreeDataProvider.cs" />
+    <Compile Include="Views\SourceList\TreeObject.cs" />
+    <Compile Include="Views\SourceList\Model\OfflineTilesetItem.cs" />
+    <Compile Include="Views\SourceList\Objects\OfflineTilesetObject.cs" />
+    <Compile Include="Views\SourceList\Model\SwitchItem.cs" />
+    <Compile Include="Views\SourceList\Objects\SwitchObject.cs" />
+    <Compile Include="Views\SourceList\ISourceListDataSource.cs" />
   </ItemGroup>
   <ItemGroup>
     <InterfaceDefinition Include="Main.storyboard" />
